update slides and problems

--- a/0_slides_intro.tex
+++ b/0_slides_intro.tex
@@ -77,10 +77,12 @@
 \item \textbf{Микроструктура рынка} (1985-2018). Модель Кайла. Deep Hedging \\
 \begin{scriptsize}{\textit{Kyle A.S. Continuous Auctions (1985); Bühler H. et al. (2019)}}\end{scriptsize}
 
-\item \textbf{Децентрализованные финансы} (2008-). Блокчейн, смарт-контракты \\
-\begin{scriptsize}{\textit{Nakamoto S. Bitcoin Whitepaper (2008)}}\end{scriptsize}
+\item \textbf{Децентрализованные финансы} (2008-). Блокчейн, смарт-контракты, Automated Market Makers\\
+\begin{scriptsize}{\textit{Nakamoto S. Bitcoin Whitepaper (2008)}}\end{scriptsize} \\
+\begin{scriptsize}{\textit{Buterin V. Ethereum Whitepaper (2014)}}\end{scriptsize} \\
+\begin{scriptsize}{\textit{Adams H. Uniswap v3 Core (2021)}}\end{scriptsize}
 
-\item \textbf{Машинное обучение} (2010-). Алгоритмический трейдинг, прогнозирование 
+\item \textbf{Машинное обучение} (2010-) Алгоритмический трейдинг, прогнозирование 
 \begin{scriptsize}{\textit{Lo A.W. Adaptive Markets (2017)}}\end{scriptsize}
 \\ Генеративные модели
 \begin{scriptsize} \textit{Hans Buehler, Generating Financial Markets With Signatures (2021)} \end{scriptsize}
