--- a/3_slides_sde.tex
+++ b/3_slides_sde.tex
@@ -177,7 +177,7 @@
     $$
 \end{frame}
 
-\begin{frame}{Хуй}
+\begin{frame}{Формула Феймана-Каца}
     \begin{block}{Утверждение}
     \begin{itemize}
         \item         Процесс $F(t, X_t)$ мартингал относительно $(\F_t)_{t\geq0}$ тогда и только тогда, когда:
